[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/game_scene/world_objects/player/player.gd" type="Script" id=1]
[ext_resource path="res://scenes/game_scene/world_objects/player/spaceships/spaceship_repository.gd" type="Script" id=2]
[ext_resource path="res://scenes/game_scene/world_objects/player/spaceships/spaceship_noob/spaceship_noob.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/game_scene/world_objects/player/spaceships/spaceship_noob/collider.tres" type="Shape" id=4]
[ext_resource path="res://audio/sfx/shoot/pew.wav" type="AudioStream" id=5]
[ext_resource path="res://scenes/game_scene/world_objects/player/player_shooting_behaviour.gd" type="Script" id=6]

[sub_resource type="BoxShape" id=1]

[node name="player" type="KinematicBody" groups=[
"player",
"friendly",
]]
collision_mask = 262144
script = ExtResource( 1 )
camera_path = NodePath("../camera")

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="spaceship_repository" type="Spatial" parent="."]
script = ExtResource( 2 )
spaceship_repository_paths = [ NodePath("spaceship_noob") ]

[node name="spaceship_noob" parent="spaceship_repository" instance=ExtResource( 3 )]
speed = 8.0
collision_shape = ExtResource( 4 )

[node name="pew" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="aim_timer" type="Timer" parent="."]
wait_time = 0.5

[node name="player_shooting_behaviour" type="Node" parent="."]
script = ExtResource( 6 )

[node name="attack_delay" type="Timer" parent="player_shooting_behaviour"]
wait_time = 0.25

[node name="sfx_pew" type="AudioStreamPlayer" parent="player_shooting_behaviour"]
[connection signal="equip_spaceship" from="spaceship_repository" to="." method="_on_spaceship_repository_equip_spaceship"]
[connection signal="timeout" from="aim_timer" to="." method="_on_AimTimer_timeout"]
[connection signal="shoot" from="player_shooting_behaviour" to="." method="_on_player_shooting_behaviour_shoot"]
[connection signal="timeout" from="player_shooting_behaviour/attack_delay" to="player_shooting_behaviour" method="_on_attack_delay_timeout"]
